--- a/app/src/main/res/layout/basic_pin.xml
+++ b/app/src/main/res/layout/basic_pin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:padding="15dp"
     android:layout_height="100dp">
     <TextView
@@ -13,5 +13,11 @@
         android:textSize="24dp"
         >
     </TextView>
+
+    <TextView
+        android:id="@+id/pin_fav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 </LinearLayout>
