--- a/app/src/main/res/layout/activity_update_pin.xml
+++ b/app/src/main/res/layout/activity_update_pin.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/secondary_black"
     tools:context=".UpdatePinActivity">
 
     <EditText
@@ -66,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/prompt_fav"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/buttonUpdatePin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
