--- a/app/src/main/res/layout/activity_youtube.xml
+++ b/app/src/main/res/layout/activity_youtube.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/secondary_black"
     tools:context=".YoutubeActivity">
 
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/YouTubePlayerView"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        app:layout_constraintTop_toBottomOf="@+id/buttonDeletePin"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/buttonDeletePin" />
 
 </LinearLayout>
