--- a/app/src/main/res/layout/basic_pin.xml
+++ b/app/src/main/res/layout/basic_pin.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:padding="15dp"
-    android:layout_height="100dp">
+    android:layout_height="wrap_content"
+    android:background="@color/secondary_black"
+    android:orientation="vertical"
+    android:padding="15dp">
+
     <TextView
         android:id="@+id/pin_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/prompt_url"
-        android:textStyle="bold"
+        android:textColor="@color/white"
         android:textSize="24dp"
-        >
-    </TextView>
+        android:textStyle="bold"></TextView>
 
     <TextView
         android:id="@+id/pin_fav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@color/white" />
 
 </LinearLayout>
